plugins {
    id 'java'
    id 'org.springframework.boot' version '3.0.4'
    id 'io.spring.dependency-management' version '1.1.0'
    id "org.flywaydb.flyway" version "9.15.1"
    id 'org.hibernate.orm'
}

group = 'com.edcm'
version = '0.0.1-SNAPSHOT'
targetCompatibility = '17'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    maven { url 'https://repo.spring.io/release' }
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator:3.0.4'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.4'
    implementation 'org.springframework.boot:spring-boot-starter-integration:3.0.4'
    implementation 'org.springframework.boot:spring-boot-starter-web:3.0.4'
    implementation 'org.springframework.boot:spring-boot-starter-webflux:3.0.4'
    implementation 'org.springframework.boot:spring-boot-starter-validation:3.0.4'
    implementation 'org.springframework.integration:spring-integration-http:6.0.3'
    implementation 'org.springframework.integration:spring-integration-jpa:6.0.3'
    implementation 'org.springframework.integration:spring-integration-zeromq:6.0.3'
    implementation 'org.hibernate:hibernate-core:6.1.7.Final'
    implementation 'org.postgresql:postgresql:42.3.8'
    implementation 'org.mapstruct:mapstruct:1.5.3.Final'
    implementation 'org.jetbrains:annotations:24.0.1'
    implementation 'io.swagger.core.v3:swagger-annotations:2.2.8'
    implementation 'org.springdoc:springdoc-openapi-ui:1.6.14'

    compileOnly 'org.projectlombok:lombok:1.18.26'
    developmentOnly 'org.springframework.boot:spring-boot-devtools:3.0.4'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor:3.0.4'
    annotationProcessor 'org.projectlombok:lombok:1.18.26'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
    testAnnotationProcessor "org.mapstruct:mapstruct-processor:1.5.3.Final"
    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.0.4'
    testImplementation 'org.springframework.integration:spring-integration-test:6.0.3'
}

tasks.named('test') {
    useJUnitPlatform()
}

hibernate {
    enhance {
        enableLazyInitialization = true
        enableDirtyTracking = true
        enableAssociationManagement = true
        enableExtendedEnhancement = false
    }
}

bootJar {
    archiveFileName = 'edcm-backend.jar'
}

if (hasProperty('buildScan')) {
    buildScan {
        termsOfServiceUrl = 'https://gradle.com/terms-of-service'
        termsOfServiceAgree = 'yes'
    }
}

flyway {
    url = System.getenv('DB_URL')
    user = System.getenv('DB_USER')
    password = System.getenv('DB_PASSWORD')
    schemas = ['public']
    createSchemas = false
    sqlMigrationSuffixes = ['.sql']
}
